--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+body {
+  background-color: rgb(230, 105, 134);
+  font-family: Rubik, Arial;
+}
+
+form {
   text-align: center;
+  line-height: 30px;
+  height: 80%;
+  overflow: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form hr {
+  width: 15%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  text-align: center;
+  font-size: 1.2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#root {
+  width: 80%;
+  margin: 3% auto;
+  height: 95vh;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+#logo {
+  height: 100px;
+  display: block;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.toppings label,
+.cheesy label {
+  margin-right: 25px;
 }
